<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/cat_camera">

        <SwitchPreferenceCompat
            app:key="use_front_camera"
            app:title="@string/pref_front_camera_title"
            app:summary="@string/pref_front_camera_summary"
            app:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cat_server">

        <SwitchPreferenceCompat
            app:key="send_to_server"
            app:title="@string/pref_send_title"
            app:summary="@string/pref_send_summary"
            app:defaultValue="false" />

        <EditTextPreference
            app:key="server_endpoint"
            app:title="@string/pref_endpoint_title"
            app:summary="@string/pref_endpoint_summary"
            app:dialogTitle="@string/pref_endpoint_title"
            app:defaultValue="https://bright-amendments-employer-notebooks.trycloudflare.com/api/occupancy"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="device_id"
            app:title="@string/pref_device_id_title"
            app:summary="@string/pref_device_id_summary"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="send_interval_sec"
            app:title="@string/pref_interval_title"
            app:summary="@string/pref_interval_summary"
            app:defaultValue="10"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
